--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "async-validator": "^3.4.0",
     "axios": "^0.20.0",
     "cnpm": "^6.1.1",
     "core-js": "^3.6.5",
+    "js-base64": "^3.5.2",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
